--- a/app/src/main/res/layout/playback_control_view.xml
+++ b/app/src/main/res/layout/playback_control_view.xml
@@ -1,45 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
+    android:layout_height="match_parent"
     android:layout_marginBottom="4dp"
-    android:orientation="horizontal">
+    android:layout_marginEnd="4dp"
+    android:layout_marginTop="4dp">
 
-    <ImageView
-        android:id="@+id/exo_muted"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_protection_oval"
-        android:contentDescription="TODO"
-        android:gravity="start"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp" />
+        android:layout_gravity="start|bottom"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/exo_info"
-        style="?android:attr/textAppearanceSmall"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:background="@drawable/background_protection"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:visibility="invisible" />
+        <ImageView
+            android:id="@+id/exo_muted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/background_protection_oval"
+            android:contentDescription="TODO" />
 
-    <TextView
-        android:id="@+id/exo_countdown"
-        style="?android:attr/textAppearanceSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/background_protection"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:textColor="@color/white"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/exo_info"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/background_protection"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="invisible" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/exo_countdown"
+            style="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/background_protection"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/exo_full_screen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/background_protection_oval"
+            android:contentDescription="TODO" />
+
+
+    </LinearLayout>
+</FrameLayout>
