--- a/app/src/main/res/layout/activity_subreddit.xml
+++ b/app/src/main/res/layout/activity_subreddit.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.SubRedditActivity">
 
-    <include layout="@layout/app_bar_layout"/>
+    <include layout="@layout/app_bar_layout" />
 
     <FrameLayout
+        android:id="@+id/fragment_subreddit_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_subreddit_container"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-       <!-- <include layout="@layout/inc_swipe" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <!-- <include layout="@layout/inc_swipe" />
 -->
-    </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
