--- a/app/src/main/res/layout-land/list_subreddit.xml
+++ b/app/src/main/res/layout-land/list_subreddit.xml
@@ -167,6 +167,12 @@
 
             <include layout="@layout/inc_player_container" />
 
+            <WebView
+                android:id="@+id/webview_youtube_subreddit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
         </LinearLayout>
 
         <LinearLayout
