--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -52,20 +52,42 @@
                             android:id="@+id/tv_author"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/roboto_regular"
+                            android:gravity="start"
+                            android:layout_weight="1"
+                            android:maxLines="@integer/list_body_text_author"
+                            android:paddingBottom="@dimen/list_padding_vertical_author"
+                            android:paddingEnd="@dimen/list_padding_horizontal_author"
+                            android:paddingStart="@dimen/list_padding_horizontal_author"
+                            android:textColor="@color/textColorSecondary"
+                            android:textStyle="bold"
                             android:text="" />
 
-                        <TextView
-                            android:id="@+id/tv_postedOn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="10dp"
-                            android:text="" />
 
                         <TextView
                             android:id="@+id/tv_points"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingLeft="10dp" />
+                            android:fontFamily="@font/roboto_regular"
+                            android:layout_gravity="end"
+                            android:paddingBottom="@dimen/list_padding_vertical_author"
+                            android:paddingEnd="@dimen/list_padding_horizontal_author"
+                            android:paddingStart="@dimen/list_padding_horizontal_author"
+                            android:textColor="@color/textColorSecondary" />
+
+                        <TextView
+                            android:id="@+id/tv_postedOn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/roboto_regular"
+                            android:gravity="end"
+                            android:paddingBottom="@dimen/list_padding_vertical_author"
+                            android:paddingEnd="@dimen/list_padding_horizontal_author"
+                            android:paddingStart="@dimen/list_padding_horizontal_author"
+                            android:textColor="@color/textColorSecondary"
+                            android:textStyle="italic"
+                            android:text="" />
 
                     </LinearLayout>
 
@@ -73,14 +95,18 @@
                     <TextView
                         android:id="@+id/tv_body"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="start|center_vertical"
+                        android:paddingBottom="@dimen/list_padding_vertical_author"
+                        android:paddingEnd="@dimen/list_padding_horizontal_author"
+                        android:paddingStart="@dimen/list_padding_horizontal_author"
+                        android:textColor="@color/textColorSecondary"/>
 
                 </LinearLayout>
-
             </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
-
 
 </android.support.v7.widget.CardView>
