--- a/app/src/free/res/layout/activity_banner.xml
+++ b/app/src/free/res/layout/activity_banner.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/activity_vertical_margin"
     tools:context=".ui.activity.MainActivity"
     tools:ignore="MergeRootFrame">
