--- a/app/src/free/res/layout/activity_main.xml
+++ b/app/src/free/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    tools:context=".free.debug.ui.activity.MainActivity"
     tools:openDrawer="start">
 
     <android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
