--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,7 +17,8 @@
     <!-- base -->
     <dimen name="base_navigation_bar_height">200dp</dimen>
 
-    <dimen name="activity_horizontal_margin" tools:keep="@dimen/activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin" tools:keep="@dimen/activity_horizontal_margin">16dp
+    </dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- list -->
@@ -27,7 +28,8 @@
 
     <dimen name="recycler_view_item_width">600dp</dimen>
 
-<dimen name="exoplayer_media_height">200dp</dimen>
+    <dimen name="exoplayer_media_height">200dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 
 </resources>
