--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,14 +29,13 @@
 
     </style>
 
-    <style name="AppThemeDark" parent="ThemeOverlay.AppCompat.Dark">
+    <style name="AppThemeDark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="colorPrimary">@color/grey_600</item>
-        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimaryDark">@color/grey_800</item>
         <item name="colorAccent">@color/light_green_A700</item>
         <item name="android:colorBackground">@color/grey_800</item>
 
         <item name="android:itemBackground">@color/grey_800</item>
-        <item name="android:background">@color/grey_800</item>
 
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorAlertDialogListItem">@color/white</item>
