--- a/app/src/main/res/layout/activity_media_youtube.xml
+++ b/app/src/main/res/layout/activity_media_youtube.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Base.ThemeOverlay.AppCompat.Dark"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,12 +15,11 @@
         app:title="@string/app_name"
         app:titleTextColor="@android:color/white" />
 
-    <fragment
-        android:id="@+id/youtube_fragment"
-        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/youtube_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        tools:layout="@layout/activity_main" />
+        tools:layout="@layout/activity_main"/>
 
 </LinearLayout>
